fix whitespace

--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
   font-size: 100%;
   background: transparent;
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 html {
   overflow: hidden;
 }
